# orbidi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python.yml
api/: main.py
api/endpoints/: hubspot_endpoint.py  sync_endpoint.py
api/models/: call_request_api.py  contact.py  contact_search_request.py
clients/: clickup_client.py  hubspot_client.py
config/: settings.py
database/: database.py
database/models/: api_call.py
database/repositories/: contact_repository.py
log/: logger.py
postman/: Your Collection Name.postman_collection.json
test/: example_test.py
test/clients/: clickup_client_test.py  hubspot_client_test.py
test/logging/: logger_test.py
